Corrected some layout issues with files split-view. Added some padding to panel-headers for consistency

--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -36,7 +36,7 @@ $main-nav-width: 				80px;
 $drawer-width: 					260px;
 $actions-width: 				250px;
 $panel-header-height: 			58px;
-$panel-header-padding-left: 	10px;
+$panel-header-padding-left: 	17px;
 $panel-header-padding-right: 	10px;
 
 $stage-left-padding: 			12px;
@@ -53,3 +53,4 @@ $em-base: 16px;
 $drawer-animation-duration: 	0.3s;
 $actions-animation-duration: 	0.3s;
 
+$panel-drop-shadow:				rgba(0, 0, 0, 0.15);
