--- a/src/scss/modules/_actions.scss
+++ b/src/scss/modules/_actions.scss
@@ -34,7 +34,7 @@
         height: 100%;
         width: $actions-width;
         // padding-top: $panel-header-height;
-        padding-left: 4px;
+        // padding-left: 4px;
         background: $alabaster;
         overflow-y: auto;
         border-left: 1px solid $silver;
